--- a/wiki/MapperHelp.wiki
+++ b/wiki/MapperHelp.wiki
@@ -3,7 +3,7 @@
 
 = Disclaimer! =
 
-Hi, I didn't write it, but i use it and leverage it in my plugin.  Fiendish's mapper plugin.  To use my triple pack you're going to want to know these fundamentals first!
+Hi, I didn't write it, but I use it and leverage it in my plugin.  *Fiendish's mapper plugin*. To use my triple pack you're going to want to know these fundamentals first!
 
 = Creating CExits (aka Custom Exits) =
 == To open a door ==
@@ -12,19 +12,22 @@ Hi, I didn't write it, but i use it and leverage it in my plugin.  Fiendish's ma
 }}}
 This will tell to mapper to open a door and walk through it.
 
-=== DETAILED STEPS ===
+=== Detailed Steps ===
   * find a closed door north 
-  * type _mapper cexit open n;;n_
+  * type *mapper cexit open n;;n* (note the 2 ;'s)
   * wait 2 seconds, you will see a blue mapping confirm message.. 
+
+=== To Test ===
   * go south back to the first room 
   * close the door north 
   * on the clickable map.. click on the room north of you 
   * you will see the mapper open the door and walk you through it
 
-== To get into tricky areas ==
-Some areas require CExits to get into them.. and excellent example is "First Ascent"
+== To get into tricky/annoying areas ==
+Some areas require CExits to get into them.. and excellent example is "First Ascent".  Type *speedwalk* for a full list of areas with cexits.
 
-  * Go to the Aylor room "GreyAsh Alley to Silvermist Road" (type *mapper goto 32529*)
+=== Detailed Steps ===
+  * Go to the Aylor room `GreyAsh Alley to Silvermist Road` (type *mapper goto 32529*)
   * type *exits*  to see the command for the custom exit (in this case it's *climb the chain*)
   * type *mapper cexit climb the chain*
   * wait 2 seconds for mapper to confirm the room
@@ -37,5 +40,5 @@ Some areas require CExits to get into them.. and excellent example is "First Asc
   * Have an alias that gets the portal out of your bag, holds it, enters it, puts the portal back in your bag, and re-holds whatever you were holding. (_ in this example we will use one called "portal_losttime"_)
   * Invoke that alias and stand in the room where the portal takes you
   * Note the *listed* level of the portal (do not take tier into account)
-  * Type "_mapper portal portal_losttime_" (for example), when prompted, type in the portal level
+  * Type *mapper portal portal_losttime* (for example), when prompted, type in the portal level
   * Done!  Now Mapper will take your portals and level into consideration when calculating the fastest path!
